# superstore-analysis-with-ml

./: .gitignore  README.md  pyproject.toml  setup_project.sh  streamlit_app.py
data/: Clustered.csv  SuperStore.csv
models/: classify_model.pkl  classify_pipe.pkl  cluster_decomposer.pkl  cluster_model.pkl  cluster_scaler.pkl  regression_model.pkl  regression_pipe.pkl
notebooks/: classification.ipynb  clustering.ipynb  inference.ipynb  order_count_perdiction.ipynb  test.ipynb  training.ipynb
pages/: clusters_page.py  order_predictive_page.py  predictive_page.py
src/superstore_analysis/: __init__.py  datasets.py  processor.py
src/superstore_analysis/pipelines/: feature_eng_pipeline.py  inference_pipeline.py  training_pipeline.py
src/superstore_analysis/pipelines/tests/: test_feature_eng_pipeline.py
