[project]
name = "superstore-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Heykal Sayid", email = "heykalsayid@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "altair>=6.0.0",
    "dill>=0.4.1",
    "ipython>=9.10.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.54.0",
]

[project.scripts]
superstore-analysis = "superstore_analysis:main"

[build-system]
requires = [
    "uv_build>=0.8.0,<0.9",
    "setuptools>=61.0"
]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ["src"]
